Make front of app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
+    <% flash.each do |key, value| %>
+      <div class="flash-notification alert alert-<%= key %>" id="flash">
+        <%= value %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
