--- a/app/views/users/new_upload.slim
+++ b/app/views/users/new_upload.slim
@@ -1,3 +1,5 @@
 = form_tag(upload_users_path, multipart: true) do
-  = file_field_tag 'file_csv'
-  = submit_tag 'Upload'
+  .form-group.text-center
+    = file_field_tag 'file_csv', class: 'form-control'
+  .form-group.text-center
+    = submit_tag 'Upload', class: 'btn btn-success'
