--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -11,7 +11,7 @@
         = f.text_field :name, class: 'form-control', placeholder: 'Name'
     .form-group.form-inline
       .field
-        = f.datetime_select :date, {}, { class: "form-control" }
+        = f.datetime_select :date, {}, { class: 'form-control' }
     .form-group
       .field
         = f.number_field :number, class: 'form-control', placeholder: 'Number'
